--- a/index.html
+++ b/index.html
@@ -82,11 +82,9 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="reviews.html">Reviews</a>
-    <a href="blog.html">Blog</a>
-    <a href="categories.html">Categories</a>
-    <a href="search.html">Search</a>
     <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="
+    <a href="
   </nav>
 
   <main>
