--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
     <a href="index.html">Home</a>
     <a href="reviews.html">Reviews</a>
     <a href="about.html">About</a>
-    <a href="
-    <a href="
+    <a href="privacy.html">Privacy</a>
+    <a href="terms.html">Terms</a>
+    <a href="disclaimer.html">Disclaimer</a>
   </nav>
 
   <main>
