--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
     <h1>7AnimeVerse</h1>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="reviews.html">Reviews</a>
-    <a href="about.html">About</a>
-    <a href="privacy.html">Privacy</a>
-    <a href="terms.html">Terms</a>
-    <a href="disclaimer.html">Disclaimer</a>
-  </nav>
+ <nav>
+  <a href="index.html">Home</a>
+  <a href="reviews.html">Reviews</a>
+  <a href="post.html">Blog</a>
+  <a href="search.html">Search</a>
+  <a href="category.html">Category</a>
+  <a href="privacy.html">Privacy</a>
+</nav>
 
   <main>
     <section>
