--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>7AnimeVerse</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>7AnimeVerse - Home</title>
   <link rel="icon" href="logo.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Roboto', sans-serif;
       background-color: #0d0d0d;
       color: #f0f0f0;
@@ -18,33 +17,34 @@
     header {
       text-align: center;
       padding: 20px;
+      background-color: #111;
+      border-bottom: 2px solid #ff4757;
     }
 
     header img {
       height: 80px;
-      margin-bottom: 10px;
     }
 
     h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 36px;
-      margin: 0;
+      font-size: 32px;
       color: #ff4757;
+      margin: 10px 0 0;
     }
 
     nav {
       background-color: #1a1a1a;
       display: flex;
       justify-content: center;
+      gap: 20px;
       padding: 12px 0;
-      box-shadow: 0 2px 4px rgba(255, 255, 255, 0.05);
     }
 
     nav a {
       color: #f0f0f0;
       text-decoration: none;
-      margin: 0 15px;
       font-weight: bold;
+      font-size: 16px;
       transition: color 0.3s;
     }
 
@@ -59,17 +59,23 @@
     }
 
     section {
-      margin-bottom: 50px;
+      margin-bottom: 40px;
+    }
+
+    h2 {
+      color: #ff4757;
+      border-bottom: 2px solid #444;
+      padding-bottom: 5px;
+      font-family: 'Orbitron', sans-serif;
     }
 
     footer {
       text-align: center;
       padding: 20px;
-      background-color: #1a1a1a;
-      color: #aaa;
-      font-size: 14px;
+      background-color: #111;
+      color: #999;
+      border-top: 1px solid #333;
     }
-
   </style>
 </head>
 <body>
@@ -79,35 +85,29 @@
     <h1>7AnimeVerse</h1>
   </header>
 
- <nav>
-  <a href="index.html">Home</a>
-  <a href="reviews.html">Reviews</a>
-  <a href="post.html">Blog</a>
-  <a href="search.html">Search</a>
-  <a href="category.html">Category</a>
-  <a href="privacy.html">Privacy</a>
-</nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="post.html">Post</a>
+    <a href="team.html">Team</a>
+    <a href="reviews.html">Review</a>
+    <a href="privacy.html">Privacy</a>
+    <a href="disclaimer.html">Disclaimer</a>
+  </nav>
 
   <main>
     <section>
       <h2>Welcome to 7AnimeVerse</h2>
-      <p>Your ultimate destination for anime reviews, top lists, news, and more. Explore a universe of anime content built just for true fans!</p>
+      <p>Explore anime reviews, team picks, and top-rated series from all genres. This is your portal into the ultimate anime universe — 7AnimeVerse!</p>
     </section>
 
     <section>
-      <h2>Top Anime This Week</h2>
-      <ul>
-        <li>Demon Slayer: Hashira Training Arc</li>
-        <li>Jujutsu Kaisen Season 2</li>
-        <li>Attack on Titan: Final Season</li>
-        <li>One Piece – Egghead Island Arc</li>
-        <li>Solo Leveling</li>
-      </ul>
+      <h2>Latest Post</h2>
+      <p><strong><a href="post1.html" style="color: #1e90ff;">Top 10 Anime of All Time</a></strong> — a curated list of timeless anime every fan must watch!</p>
     </section>
 
     <section>
-      <h2>Latest News & Updates</h2>
-      <p>Check back soon for daily news, leaks, and episode breakdowns from your favorite anime titles!</p>
+      <h2>Why 7AnimeVerse?</h2>
+      <p>Whether you're a seasoned otaku or new to the world of anime, we bring you handpicked lists, honest reviews, and community-backed rankings with passion and style.</p>
     </section>
   </main>
 
