--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="post.html">Post</a>
-    <a href="team.html">Team</a>
+    <a href="term.html">Term</a>
     <a href="privacy.html">Privacy</a>
     <a href="disclaimer.html">Disclaimer</a>
   </nav>
