--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="7AnimeVerse Logo" />
+    <img src="Anime.jpeg" alt="7AnimeVerse Logo" style="height: 100px;" />
     <h1>7AnimeVerse</h1>
   </header>
 
