--- a/post2.html
+++ b/post2.html
@@ -2,62 +2,128 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Demon Slayer: Infinity Castle Arc – Full Summary</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Demon Slayer: Infinity – 7AnimeVerse</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #1c1c1e;
+      color: #f5f5f7;
+      margin: 0;
+      padding: 0;
+      line-height: 1.8;
+    }
+    nav {
+      background-color: #2c2c2e;
+      padding: 15px 20px;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 10px;
+      font-weight: bold;
+      font-size: 1rem;
+      padding: 8px 16px;
+      background-color: #ff5f5f;
+      border-radius: 8px;
+    }
+    nav a:hover {
+      background-color: #e04848;
+    }
+    .container {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: #2c2c2e;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+    img {
+      max-width: 100%;
+      border-radius: 12px;
+      margin: 20px 0;
+    }
+    h1, h2, h3 {
+      color: #ffd700;
+    }
+    .buttons {
+      margin-top: 40px;
+      text-align: center;
+    }
+    .buttons a {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 24px;
+      background-color: #5f9eff;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+    }
+    .buttons a:first-child {
+      background-color: #ff5f5f;
+    }
+    .buttons a:hover {
+      opacity: 0.85;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <nav>
+
+  <nav>
+    <a href="index.html">🏠 Home</a>
+    <a href="post.html">📝 Post</a>
+  </nav>
+
+  <div class="container">
+    <h1>🔥 Demon Slayer: Infinity – A New Era of Breathing Styles</h1>
+
+    <img src="/images/demon_slayer_infinity.jpg" alt="Demon Slayer Infinity">
+
+    <h2>🎬 A New Chapter Begins</h2>
+    <p>
+      Set five years after the defeat of Muzan Kibutsuji, <strong>Demon Slayer: Infinity</strong> introduces a new generation of demon slayers led by Renjiro Kamado. Demons are returning—more brutal and organized than ever. Flashbacks of classic characters like Tanjiro and Nezuko bring nostalgia, while fresh faces drive the intense new arc forward.
+    </p>
+
+    <h2>🗡️ Infinity Breathing: A New Power</h2>
+    <p>
+      Infinity Breathing is a new technique that blends all known breathing styles into one adaptive form. Inspired by Yoriichi Tsugikuni’s secret scrolls, this style includes:
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="post.html">Post</a></li>
+        <li><strong>First Form – Void Slash</strong></li>
+        <li><strong>Second Form – Eternal Flame Typhoon</strong></li>
+        <li><strong>Third Form – Timeless Flow</strong></li>
       </ul>
-    </nav>
-  </header>
-
-  <main>
-    <h1>Demon Slayer: Infinity Castle Arc – Full Summary</h1>
-
-    <p>
-      The *Infinity Castle Arc* is one of the most climactic parts of the *Demon Slayer: Kimetsu no Yaiba* series. Following the defeat of the Upper Rank Two demon Doma, the Demon Slayer Corps finds themselves pulled into Muzan Kibutsuji's dimension known as the Infinity Castle. This surreal, shifting fortress is controlled by Nakime, a biwa-playing demon who manipulates its architecture at will.
+      The animation and effects are breathtaking, with Ufotable pushing the boundaries of anime visuals.
     </p>
 
+    <h2>😈 The Return of the Twelve Moon Shadows</h2>
     <p>
-      Once inside, the Demon Slayers are separated across the vast castle. Each warrior faces off against powerful Upper Moon demons in fierce one-on-one or team battles. The arc is filled with emotional character moments, major revelations, and heartbreaking deaths that push the story to its peak.
+      Replacing the Kizuki, the Twelve Moon Shadows are the next threat. They’re faster, crueler, and use fused demonic powers. The main villain, <strong>Kuragami</strong>, manipulates time in battle, making every fight unpredictable and intense.
     </p>
 
+    <ul>
+      <li><strong>No. 9 – Akurei</strong>: Illusion based on fear.</li>
+      <li><strong>No. 5 – Zuna</strong>: Corrosive poison mist.</li>
+      <li><strong>No. 1 – Kuragami</strong>: Time-warping demon lord.</li>
+    </ul>
+
+    <h2>🧠 Deeper Themes & Emotion</h2>
     <p>
-      One of the earliest and most emotional battles is between the Insect Hashira, <strong>Shinobu Kocho</strong>, and Upper Rank 2 demon <strong>Doma</strong>. Knowing she stands no chance in direct combat, Shinobu devises a long-term strategy. She has been consuming small amounts of wisteria poison for over a year to make her body deadly to demons. During their brutal confrontation, she sacrifices herself, allowing Doma to absorb her and become heavily poisoned. This makes him vulnerable, and ultimately, he is defeated by <strong>Kanao Tsuyuri</strong> and <strong>Inosuke Hashibira</strong>.
+      The emotional stakes are high. Renjiro questions whether peace is even possible. Demons have deep backstories, blurring lines between villain and victim. Quote of the season:
+      <blockquote>“If I had one more breath, I’d use it… not to kill… but to forgive.”</blockquote>
     </p>
 
+    <h2>🌟 Final Thoughts</h2>
     <p>
-      Meanwhile, the Wind Hashira <strong>Sanemi Shinazugawa</strong> and the Stone Hashira <strong>Gyomei Himejima</strong> face off against the strongest Upper Moon, <strong>Kokushibo</strong> (Upper Rank 1). This battle is among the most intense in the series. Kokushibo is revealed to be <strong>Michikatsu Tsugikuni</strong>, the brother of the legendary Demon Slayer Yoriichi Tsugikuni. Once a swordsman himself, Michikatsu became a demon out of envy and fear of death. Despite his immense power and multiple forms, he is finally brought down after a grueling battle in which <strong>Genya Shinazugawa</strong>, <strong>Muichiro Tokito</strong> (the Mist Hashira), and eventually Gyomei himself all lose their lives.
+      <strong>Demon Slayer: Infinity</strong> is more than a sequel — it's a masterpiece. It balances action, heart, and brilliant visuals. A must-watch in 2025 for all anime lovers.
     </p>
 
-    <p>
-      The emotional toll continues to rise as the battles rage. <strong>Tanjiro Kamado</strong> and his allies, including <strong>Zenitsu</strong> and <strong>Nezuko</strong>, struggle to navigate the castle while preparing for the final battle against <strong>Muzan Kibutsuji</strong>. Meanwhile, <strong>Tamayo</strong>, the demon doctor, plays a key role in attempting to weaken Muzan with a special drug designed to accelerate his aging and destabilize his power.
-    </p>
+    <div class="buttons">
+      <a href="index.html">🏠 Home</a>
+      <a href="post.html">📝 Post</a>
+    </div>
+  </div>
 
-    <p>
-      One key development during this arc is Nezuko's transformation. For most of the series, she has fought as a demon resisting her instincts. But during this arc, she regains her humanity — an emotional turning point that symbolizes hope for all demons cursed by Muzan.
-    </p>
-
-    <p>
-      After defeating the Upper Moons, the Infinity Castle begins to collapse as Nakime is killed by Yushiro, Tamayo’s loyal companion. Muzan, now cornered, escapes to the surface, which sets the stage for the final arc: the Sunrise Countdown.
-    </p>
-
-    <p>
-      The Infinity Castle Arc is notable not just for its jaw-dropping action and animation (in the upcoming anime adaptation), but also for its depth. It explores themes like redemption, the consequences of envy, the fragility of life, and the cost of revenge. Every character has a meaningful role to play, and their sacrifices highlight the human side of this battle.
-    </p>
-
-    <p>
-      In conclusion, the Infinity Castle Arc is one of the most emotional and gripping parts of the Demon Slayer saga. It changes the dynamics of the series completely, bringing closure to several storylines while raising the stakes higher than ever. With many beloved characters lost and the final battle against Muzan looming, fans are left both heartbroken and eager to witness the ultimate conclusion of Tanjiro’s journey.
-    </p>
-  </main>
-
-  <footer>
-    <p style="text-align:center;">&copy; 2025 7AnimeVerse. All rights reserved.</p>
-  </footer>
 </body>
 </html>
