--- a/post1.html
+++ b/post1.html
@@ -3,163 +3,99 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Top 10 Anime of All Time - 7AnimeVerse</title>
-  <link rel="icon" href="logo.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto&display=swap" rel="stylesheet" />
+  <title>Best Anime in 2025 | 7AnimeVerse</title>
   <style>
     body {
+      background-color: #1c1c1e;
+      color: #ffffff;
+      font-family: 'Segoe UI', sans-serif;
+      line-height: 1.8;
       margin: 0;
-      font-family: 'Roboto', sans-serif;
-      background-color: #0d0d0d;
-      color: #f0f0f0;
-      line-height: 1.6;
+      padding: 0;
     }
-
-    header {
-      text-align: center;
-      padding: 20px;
-    }
-
-    header img {
-      height: 80px;
-      margin-bottom: 10px;
-    }
-
-    h1 {
-      font-family: 'Orbitron', sans-serif;
-      color: #ff4757;
-      margin: 0;
-      font-size: 28px;
-    }
-
     nav {
-      background-color: #1a1a1a;
-      display: flex;
-      justify-content: center;
-      padding: 12px 0;
-    }
-
-    nav a {
-      color: #f0f0f0;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #ff4757;
-    }
-
-    main {
-      max-width: 900px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-
-    h2 {
-      color: #ff6b81;
-    }
-
-    .anime-entry {
-      margin-bottom: 40px;
-    }
-
-    .anime-entry img {
-      width: 100%;
-      max-height: 400px;
-      object-fit: cover;
-      border-radius: 12px;
-      margin-bottom: 10px;
-    }
-
-    .anime-entry h3 {
-      color: #ffa07a;
-      margin-top: 10px;
-    }
-
-    footer {
+      background-color: #2c2c2e;
       text-align: center;
+      padding: 15px;
+    }
+    nav a {
+      text-decoration: none;
+      margin: 0 10px;
+      color: white;
+      background-color: #ff5f5f;
+      padding: 8px 16px;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+    .container {
+      max-width: 900px;
+      margin: 30px auto;
       padding: 20px;
-      background-color: #1a1a1a;
-      color: #aaa;
+      background-color: #2c2c2e;
+      border-radius: 12px;
+    }
+    img {
+      width: 100%;
+      border-radius: 12px;
+      margin: 20px 0;
+    }
+    h1 {
+      color: #ff5f5f;
+    }
+    .buttons {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .buttons a {
+      text-decoration: none;
+      margin: 10px;
+      background-color: #5f9eff;
+      padding: 12px 24px;
+      color: white;
+      border-radius: 8px;
+      display: inline-block;
+    }
+    .buttons a:first-child {
+      background-color: #ff5f5f;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <img src="logo.png" alt="7AnimeVerse Logo" />
-    <h1>7AnimeVerse</h1>
-  </header>
-
   <nav>
-    <a href="index.html">Home</a>
-    <a href="post.html">Posts</a>
+    <a href="index.html">🏠 Home</a>
+    <a href="post.html">📝 Post</a>
   </nav>
 
-  <main>
-    <h2>Top 10 Anime of All Time</h2>
-    <p><em>By 7AnimeVerse | August 1, 2025</em></p>
+  <div class="container">
+    <h1>🌟 Best Anime in 2025</h1>
 
-    <div class="anime-entry">
-      <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Attack_on_Titan_S4_Part_1.jpg" alt="Attack on Titan" />
-      <h3>1. Attack on Titan</h3>
-      <p>Gripping, intense, and with one of the most complex plots in anime history. Titans, betrayal, freedom — this one has it all.</p>
+    <img src="/images/post1.jpg" alt="Best Anime 2025">
+
+    <p>
+      2025 has been a golden year for anime fans. With intense action, deep stories, and beautiful animation, fans were treated to legendary titles that pushed the boundaries of anime as a medium.
+    </p>
+
+    <p>
+      Some of the top anime that stole the spotlight this year include:
+      <ul>
+        <li><strong>Jujutsu Kaisen: The Final War</strong> – A jaw-dropping finale to the beloved franchise.</li>
+        <li><strong>Demon Slayer: Infinity</strong> – A sequel that introduces powerful new breathing techniques and terrifying demons.</li>
+        <li><strong>Solo Leveling: Season 2</strong> – The rise of Sung Jin-Woo continues with even more epic battles.</li>
+        <li><strong>My Hero Academia: Vigilante Saga</strong> – A darker turn into underground hero society.</li>
+        <li><strong>Bleach: Hell Arc</strong> – A stunning return that left old fans thrilled.</li>
+      </ul>
+    </p>
+
+    <p>
+      Each of these series brought something unique, whether it was emotional storytelling, plot twists, or god-tier animation. If you're an anime fan, 2025 has delivered something unforgettable.
+    </p>
+
+    <div class="buttons">
+      <a href="index.html">🏠 Home</a>
+      <a href="post.html">📝 Post</a>
     </div>
-
-    <div class="anime-entry">
-      <img src="https://upload.wikimedia.org/wikipedia/en/3/30/Death_Note_Vol_1.jpg" alt="Death Note" />
-      <h3>2. Death Note</h3>
-      <p>A psychological battle between Light and L — brilliant writing, characters, and suspense in every episode.</p>
-    </div>
-
-    <div class="anime-entry">
-      <img src="https://upload.wikimedia.org/wikipedia/en/b/ba/Demon_Slayer_Kimetsu_no_Yaiba_volume_1_cover.jpg" alt="Demon Slayer" />
-      <h3>3. Demon Slayer</h3>
-      <p>Stunning visuals, heartfelt characters, and intense demon-hunting action. A modern favorite.</p>
-    </div>
-
-    <div class="anime-entry">
-      <h3>4. Fullmetal Alchemist: Brotherhood</h3>
-      <p>A masterpiece of world-building, alchemy, brotherhood, and emotional depth. A must-watch for all anime fans.</p>
-    </div>
-
-    <div class="anime-entry">
-      <h3>5. One Piece</h3>
-      <p>A never-ending adventure of friendship, dreams, and the sea. With 1000+ episodes, it’s the king of long-running anime.</p>
-    </div>
-
-    <div class="anime-entry">
-      <h3>6. Naruto Shippuden</h3>
-      <p>The ultimate journey of an underdog becoming a legend. Packed with iconic battles and life lessons.</p>
-    </div>
-
-    <div class="anime-entry">
-      <h3>7. Hunter x Hunter</h3>
-      <p>A smart shounen with deep themes, strong character development, and strategic action arcs.</p>
-    </div>
-
-    <div class="anime-entry">
-      <h3>8. My Hero Academia</h3>
-      <p>Quirks, heroes, and emotional training arcs. A perfect entry for new anime fans.</p>
-    </div>
-
-    <div class="anime-entry">
-      <h3>9. Jujutsu Kaisen</h3>
-      <p>Modern animation meets dark curses and sorcery. Clean fights and great character designs.</p>
-    </div>
-
-    <div class="anime-entry">
-      <h3>10. Code Geass</h3>
-      <p>Strategic rebellion led by a masked genius. Twists, mechas, and one of the most memorable endings.</p>
-    </div>
-
-  </main>
-
-  <footer>
-    &copy; 2025 7AnimeVerse. All rights reserved.
-  </footer>
+  </div>
 
 </body>
 </html>
