--- a/post2.html
+++ b/post2.html
@@ -3,34 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Demon Slayer: Infinity – 7AnimeVerse</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Solo Leveling Season 2 | 7AnimeVerse</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
       background-color: #1c1c1e;
-      color: #f5f5f7;
+      color: #ffffff;
+      font-family: 'Segoe UI', sans-serif;
+      line-height: 1.8;
       margin: 0;
       padding: 0;
-      line-height: 1.8;
     }
     nav {
       background-color: #2c2c2e;
-      padding: 15px 20px;
       text-align: center;
+      padding: 15px;
     }
     nav a {
-      color: #fff;
       text-decoration: none;
       margin: 0 10px;
-      font-weight: bold;
-      font-size: 1rem;
-      padding: 8px 16px;
+      color: white;
       background-color: #ff5f5f;
+      padding: 8px 16px;
       border-radius: 8px;
-    }
-    nav a:hover {
-      background-color: #e04848;
+      font-weight: bold;
     }
     .container {
       max-width: 900px;
@@ -38,34 +33,30 @@
       padding: 20px;
       background-color: #2c2c2e;
       border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
     img {
-      max-width: 100%;
+      width: 100%;
       border-radius: 12px;
       margin: 20px 0;
     }
-    h1, h2, h3 {
-      color: #ffd700;
+    h1 {
+      color: #ff5f5f;
     }
     .buttons {
-      margin-top: 40px;
       text-align: center;
+      margin-top: 30px;
     }
     .buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 24px;
-      background-color: #5f9eff;
-      color: white;
       text-decoration: none;
+      margin: 10px;
+      background-color: #5f9eff;
+      padding: 12px 24px;
+      color: white;
       border-radius: 8px;
+      display: inline-block;
     }
     .buttons a:first-child {
       background-color: #ff5f5f;
-    }
-    .buttons a:hover {
-      opacity: 0.85;
     }
   </style>
 </head>
@@ -77,46 +68,29 @@
   </nav>
 
   <div class="container">
-    <h1>🔥 Demon Slayer: Infinity – A New Era of Breathing Styles</h1>
+    <h1>🛡️ Solo Leveling Season 2: Rise of the Shadow King</h1>
 
-    <img src="/images/demon_slayer_infinity.jpg" alt="Demon Slayer Infinity">
+    <img src="/images/post2.jpg" alt="Solo Leveling Season 2">
 
-    <h2>🎬 A New Chapter Begins</h2>
     <p>
-      Set five years after the defeat of Muzan Kibutsuji, <strong>Demon Slayer: Infinity</strong> introduces a new generation of demon slayers led by Renjiro Kamado. Demons are returning—more brutal and organized than ever. Flashbacks of classic characters like Tanjiro and Nezuko bring nostalgia, while fresh faces drive the intense new arc forward.
+      Solo Leveling returned in 2025 with Season 2, and fans were once again immersed in the world of dungeons, hunters, and shadows. This season picks up with <strong>Sung Jin-Woo</strong> embracing his role as the Shadow Monarch.
     </p>
 
-    <h2>🗡️ Infinity Breathing: A New Power</h2>
     <p>
-      Infinity Breathing is a new technique that blends all known breathing styles into one adaptive form. Inspired by Yoriichi Tsugikuni’s secret scrolls, this style includes:
+      The action sequences are jaw-dropping, but the biggest evolution is in Jin-Woo’s character. He’s no longer just trying to survive — he’s protecting nations. The world-building expands with threats from outside Earth and the looming war with the Monarchs.
+    </p>
+
+    <p>
+      Highlights include:
       <ul>
-        <li><strong>First Form – Void Slash</strong></li>
-        <li><strong>Second Form – Eternal Flame Typhoon</strong></li>
-        <li><strong>Third Form – Timeless Flow</strong></li>
+        <li>Jin-Woo vs the Beast Monarch – A brutal one-on-one that breaks city blocks.</li>
+        <li>Beru and Igris evolving into smarter, stronger shadow generals.</li>
+        <li>Emotional scenes with Jin-Woo’s family and sacrifices made by other hunters.</li>
       </ul>
-      The animation and effects are breathtaking, with Ufotable pushing the boundaries of anime visuals.
     </p>
 
-    <h2>😈 The Return of the Twelve Moon Shadows</h2>
     <p>
-      Replacing the Kizuki, the Twelve Moon Shadows are the next threat. They’re faster, crueler, and use fused demonic powers. The main villain, <strong>Kuragami</strong>, manipulates time in battle, making every fight unpredictable and intense.
-    </p>
-
-    <ul>
-      <li><strong>No. 9 – Akurei</strong>: Illusion based on fear.</li>
-      <li><strong>No. 5 – Zuna</strong>: Corrosive poison mist.</li>
-      <li><strong>No. 1 – Kuragami</strong>: Time-warping demon lord.</li>
-    </ul>
-
-    <h2>🧠 Deeper Themes & Emotion</h2>
-    <p>
-      The emotional stakes are high. Renjiro questions whether peace is even possible. Demons have deep backstories, blurring lines between villain and victim. Quote of the season:
-      <blockquote>“If I had one more breath, I’d use it… not to kill… but to forgive.”</blockquote>
-    </p>
-
-    <h2>🌟 Final Thoughts</h2>
-    <p>
-      <strong>Demon Slayer: Infinity</strong> is more than a sequel — it's a masterpiece. It balances action, heart, and brilliant visuals. A must-watch in 2025 for all anime lovers.
+      Whether you’ve read the webtoon or not, Season 2 is an epic continuation that balances raw power with real heart.
     </p>
 
     <div class="buttons">
