--- a/post.html
+++ b/post.html
@@ -25,10 +25,11 @@
     }
 
     h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 32px;
-      margin: 0;
-      color: #ff4757;
+      h1 {
+  color: #ff4d4d;
+  font-size: 2.5rem;
+  text-align: center;
+        
     }
 
     nav {
