--- a/post2.html
+++ b/post2.html
@@ -40,7 +40,12 @@
       margin: 20px 0;
     }
     h1 {
-      color: #ff5f5f;
+      h1 {
+  color: #ff4d4d;
+  font-size: 2.5rem;
+  text-align: center;
+      }
+      
     }
     .buttons {
       text-align: center;
