--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <section>
       <h2>Latest Post</h2>
-      <p><strong><a href="post1.html" style="color: #1e90ff;">Top 10 Anime of All Time</a></strong> — a curated list of timeless anime every fan must watch!</p>
+      <p><strong><a href="post1.html" style="color: #1e90ff;">Best Anime</a></strong> — a curated list of timeless anime every fan must watch!</p>
     </section>
 
     <section>
