--- a/post1.html
+++ b/post1.html
@@ -75,7 +75,9 @@
   <div class="container">
     <h1>🌟 Best Anime in 2025</h1>
 
-    <img src="/images/post1.jpg" alt="Best Anime 2025">
+    <img src="images/anime_collage_2025.jpg" alt="Best Anime Collage 2025"
+  style="width: 100%; max-width: 800px; display: block; margin: 20px auto; border-radius: 15px; box-shadow: 0 0 20px #ff4d4d;" />
+
 
     <p>
       2025 has been a golden year for anime fans. With intense action, deep stories, and beautiful animation, fans were treated to legendary titles that pushed the boundaries of anime as a medium.
