--- a/post2.html
+++ b/post2.html
@@ -73,9 +73,7 @@
   </nav>
 
   <div class="container">
-    <h1>🛡️ Solo Leveling Season 2: Rise of the Shadow King</h1>
-
-    <img src="/images/post2.jpg" alt="Solo Leveling Season 2">
+    <h1>🛡️ Solo Leveling Season 2: Rise of the Shadow King</h1
 
     <p>
       Solo Leveling returned in 2025 with Season 2, and fans were once again immersed in the world of dungeons, hunters, and shadows. This season picks up with <strong>Sung Jin-Woo</strong> embracing his role as the Shadow Monarch.
