--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
       <h2>Why 7AnimeVerse?</h2>
       <p>Whether you're a seasoned otaku or new to the world of anime, we bring you handpicked lists, honest reviews, and community-backed rankings with passion and style.</p>
     </section>
-  </main>
-
+  </main><a href="contact.html" class="contact-btn">Contact</a>
   <footer>
     &copy; 2025 7AnimeVerse. All rights reserved.
   </footer>
