--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@
       font-family: 'Roboto', sans-serif;
       background-color: #0d0d0d;
       color: #f0f0f0;
+      .contact-btn {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #00ffff;
+  color: #000;
+  padding: 15px 30px;
+  font-size: 18px;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 40px;
+  box-shadow: 0 0 12px #00ffff;
+  transition: 0.3s ease;
+  z-index: 999;
+}
+.contact-btn:hover {
+  background-color: #fff;
+  color: #000;
+}
     }
 
     header {
