--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
   border-radius: 40px;
   box-shadow: 0 0 12px #00ffff;
   transition: 0.3s ease;
-  z-index: 999;
+  z-index: 999
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.contact-btn:hover {
+  background-color: #fff;
+  color: #000;
+}
+        
 }
 .contact-btn:hover {
   background-color: #fff;
