--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="bcH19FcPq5CWbfzO8ZOEhikbcD9zdQ5DtQFupmSxLrU" />
+  <!-- SEO Meta Tags -->
+<meta name="description" content="7AnimeVerse – The best anime reviews, rankings, and latest anime posts.">
+<meta name="keywords" content="anime, best anime, anime 2025, anime reviews, anime site">
+<meta name="author" content="7AnimeVerse">
+
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="7AnimeVerse – Best Anime Reviews">
+<meta property="og:description" content="Explore top anime picks, reviews, and trending shows of 2025.">
+<meta property="og:image" content="https://7animeverse.github.io/images/og-image.jpg">
+<meta property="og:url" content="https://7animeverse.github.io/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="7AnimeVerse – Best Anime Reviews">
+<meta name="twitter:description" content="Explore top anime picks, reviews, and trending shows of 2025.">
+<meta name="twitter:image" content="https://7animeverse.github.io/images/og-image.jpg">
+  
   <title>7AnimeVerse</title>
   <style>
     body {
