--- a/index.html
+++ b/index.html
@@ -2,42 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="google-site-verification" content="bcH19FcPq5CWbfzO8ZOEhikbcD9zdQ5DtQFupmSxLrU" />
-  <!-- SEO Meta Tags -->
-<meta name="description" content="7AnimeVerse – The best anime reviews, rankings, and latest anime posts.">
-<meta name="keywords" content="anime, best anime, anime 2025, anime reviews, anime site">
-<meta name="author" content="7AnimeVerse">
-
-<!-- Open Graph Meta Tags -->
-<meta property="og:title" content="7AnimeVerse – Best Anime Reviews">
-<meta property="og:description" content="Explore top anime picks, reviews, and trending shows of 2025.">
-<meta property="og:image" content="https://7animeverse.github.io/images/og-image.jpg">
-<meta property="og:url" content="https://7animeverse.github.io/">
-<meta property="og:type" content="website">
-
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="7AnimeVerse – Best Anime Reviews">
-<meta name="twitter:description" content="Explore top anime picks, reviews, and trending shows of 2025.">
-<meta name="twitter:image" content="https://7animeverse.github.io/images/og-image.jpg">
-  
-  <title>7AnimeVerse</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>7AnimeVerse - Your Anime Hub</title>
   <style>
     body {
-      margin: 0;
+      background-color: #121212;
+      color: #eee;
       font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
+      margin: 0; padding: 0;
     }
     header {
-      background-color: #111;
+      background-color: #1f1f1f;
       padding: 20px;
       text-align: center;
-    }
-    header h1 {
-      color: #e50914;
-      margin: 0;
+      font-size: 2rem;
+      font-weight: bold;
+      letter-spacing: 2px;
+      color: #f39c12;
     }
     nav {
       background-color: #222;
@@ -46,70 +27,74 @@
       padding: 10px 0;
     }
     nav a {
-      color: #fff;
+      color: #eee;
       text-decoration: none;
       margin: 0 15px;
       font-weight: bold;
+      transition: color 0.3s;
     }
     nav a:hover {
-      color: #e50914;
+      color: #f39c12;
     }
     main {
-      padding: 20px;
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 0 20px;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 1.2rem;
+      line-height: 1.5;
+      margin-bottom: 20px;
+    }
+    .button {
+      background-color: #f39c12;
+      border: none;
+      padding: 15px 30px;
+      color: #121212;
+      font-weight: bold;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 5px;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 15px;
+      transition: background-color 0.3s;
+    }
+    .button:hover {
+      background-color: #d78f10;
     }
     footer {
-      background-color: #111;
+      background-color: #1f1f1f;
       color: #777;
       text-align: center;
-      padding: 15px;
-      font-size: 14px;
-    }
-    .contact-button {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #e50914;
-      color: #fff;
-      padding: 12px 24px;
-      font-size: 16px;
-      font-weight: bold;
-      border: none;
-      border-radius: 25px;
-      cursor: pointer;
-      text-decoration: none;
-      z-index: 1000;
-    }
-    .contact-button:hover {
-      background-color: #ff1a2c;
+      padding: 15px 0;
+      margin-top: 50px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-
-  <header>
-    <h1>7AnimeVerse</h1>
-  </header>
-
+  <header>7AnimeVerse</header>
   <nav>
     <a href="index.html">Home</a>
     <a href="post.html">Post</a>
-    <a href="team.html">Team</a>
     <a href="review.html">Review</a>
+    <a href="team.html">Team</a>
     <a href="privacy.html">Privacy</a>
     <a href="disclaimer.html">Disclaimer</a>
   </nav>
-
   <main>
-    <h2>Welcome to 7AnimeVerse</h2>
-    <p>All about anime: top reviews, latest news, and trending series in 2025! Dive into the world of anime with us 🚀</p>
+    <h1>Welcome to 7AnimeVerse</h1>
+    <p>Your ultimate destination for anime reviews, news, and rankings. Dive into the world of fantasy, action, and drama with us!</p>
+    <a href="post.html" class="button">Explore Posts</a>
   </main>
-
-  <a class="contact-button" href="mailto:7AnimeVerse7@gmail.com">📧 Contact</a>
-
   <footer>
     &copy; 2025 7AnimeVerse. All rights reserved.
   </footer>
-
 </body>
 </html>
