--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       display: flex;
       justify-content: center;
       padding: 10px 0;
+      flex-wrap: wrap;
     }
     nav a {
       color: #eee;
@@ -32,6 +33,7 @@
       margin: 0 15px;
       font-weight: bold;
       transition: color 0.3s;
+      padding: 8px 5px;
     }
     nav a:hover {
       color: #f39c12;
@@ -41,14 +43,19 @@
       margin: 30px auto;
       padding: 0 20px;
       text-align: center;
+      line-height: 1.6;
     }
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
+      margin-bottom: 15px;
+    }
+    h2 {
+      color: #f39c12;
+      margin-top: 40px;
       margin-bottom: 10px;
     }
     p {
       font-size: 1.2rem;
-      line-height: 1.5;
       margin-bottom: 20px;
     }
     .button {
@@ -85,13 +92,25 @@
     <a href="post.html">Post</a>
     <a href="review.html">Review</a>
     <a href="team.html">Team</a>
+    <a href="contact.html">Contact</a>
     <a href="privacy.html">Privacy</a>
     <a href="disclaimer.html">Disclaimer</a>
   </nav>
   <main>
     <h1>Welcome to 7AnimeVerse</h1>
-    <p>Your ultimate destination for anime reviews, news, and rankings. Dive into the world of fantasy, action, and drama with us!</p>
+    <p>Your ultimate destination for anime reviews, news, and rankings. Dive into the world of fantasy, action, drama, and more with us!</p>
+    <p>At 7AnimeVerse, we are passionate about sharing the best anime content with fellow fans. Whether you’re a seasoned otaku or just starting your anime journey, our detailed posts and reviews will help you discover new series and deepen your love for classic favorites.</p>
+    <p>Explore expertly crafted articles, character analyses, episode breakdowns, and the latest updates from the anime universe. Join our community and stay ahead with trending series and timeless masterpieces.</p>
     <a href="post.html" class="button">Explore Posts</a>
+
+    <h2>Why Choose 7AnimeVerse?</h2>
+    <p>We bring you honest and in-depth reviews, backed by passionate research and fan insights. Our team carefully curates content to ensure you get the most accurate and entertaining information.</p>
+
+    <h2>Featured Genres</h2>
+    <p>From high-energy shonen battles to heartwarming slice-of-life stories, 7AnimeVerse covers a broad spectrum of genres to suit every taste. Check out our dedicated posts on fantasy, sci-fi, romance, horror, and more.</p>
+
+    <h2>Stay Connected</h2>
+    <p>Follow us on social media and subscribe to our newsletter to never miss an update. Be part of the 7AnimeVerse family and share your thoughts and recommendations with fellow anime enthusiasts.</p>
   </main>
   <footer>
     &copy; 2025 7AnimeVerse. All rights reserved.
