--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
       padding: 15px 0;
       margin-top: 50px;
       font-size: 0.9rem;
+      <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7504423411021663"
+     crossorigin="anonymous"></script>
+</head>
+      
     }
   </style>
 </head>
