--- a/index.html
+++ b/index.html
@@ -116,6 +116,21 @@
     <h2>Stay Connected</h2>
     <p>Follow us on social media and subscribe to our newsletter to never miss an update. Be part of the 7AnimeVerse family and share your thoughts and recommendations with fellow anime enthusiasts.</p>
   </main>
+  <body>
+  <!-- Your page content -->
+
+  <!-- Ad unit at the bottom -->
+  <ins class="adsbygoogle"
+       style="display:block; text-align:center;"
+       data-ad-client="ca-pub-7504423411021663"
+       data-ad-slot="1788262729"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+  </body>
+  
   <footer>
     &copy; 2025 7AnimeVerse. All rights reserved.
   </footer>
