--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="post.html">Post</a>
-    <a href="team.html">Team</a>
+    <a href="terms.html">Terms</a>
     <a href="contact.html">Contact</a>
     <a href="privacy.html">Privacy</a>
     <a href="disclaimer.html">Disclaimer</a>
