--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="fl3YbUHDsM105mGmbL0khRNWVdvhoVRsNHNMWLxFwuY" />
   <title>7AnimeVerse - Your Anime Hub</title>
   <style>
     body {
