--- a/post12.html
+++ b/post12.html
@@ -3,69 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Attack on Titan – A Dark Masterpiece That Redefined Anime</title>
+  <title>Attack on Titan Review</title>
 </head>
 <body>
+  <!-- Navigation -->
   <nav>
-    <a href="index.html">Home</a>
+    <a href="index.html">Home</a> |
     <a href="post.html">Post</a>
   </nav>
 
+  <!-- Main Content -->
   <main>
     <h1>Attack on Titan – A Dark Masterpiece That Redefined Anime</h1>
 
-    <p><strong>Introduction</strong><br>
-    When people think of anime that shook the world, few titles come close to <em>Attack on Titan (Shingeki no Kyojin)</em>. From its jaw-dropping action scenes to its haunting themes of freedom, war, and human survival, this series has carved a permanent mark in anime history. Today, let’s dive deep into what makes <em>Attack on Titan</em> one of the most powerful and unforgettable anime ever created.</p>
+    <!-- Featured Image -->
+    <img src="https://upload.wikimedia.org/wikipedia/en/7/73/Shingeki_no_Kyojin_manga_volume_1.jpg" 
+         alt="Attack on Titan Poster" 
+         width="400">
 
-    <h2>1. The World of Titans 🗡️</h2>
-    <p>The story begins in a walled city where humanity hides from man-eating giants called <strong>Titans</strong>. These walls (Maria, Rose, and Sheena) symbolize both safety and imprisonment. At first, viewers think it’s a simple tale of humans vs. monsters — but as the series progresses, the truth about Titans and the outside world changes everything.</p>
+    <p><strong>Introduction:</strong>  
+    Few anime have left as big an impact on the world as <em>Attack on Titan (Shingeki no Kyojin)</em>. With its mix of breathtaking action, emotional depth, and thought-provoking themes, it became a cultural phenomenon. This review dives into what makes it so unforgettable.</p>
 
-    <h2>2. Eren Yeager – The Tragic Hero</h2>
-    <p>Eren Yeager starts as a passionate boy who hates Titans and dreams of freedom. But as the story evolves, Eren’s journey becomes one of the most complex character arcs in anime. He goes from hero to anti-hero, making choices that challenge our definition of “good” and “evil.”</p>
-    <ul>
-      <li><strong>Season 1 Eren:</strong> Driven by revenge after his mother’s death.</li>
-      <li><strong>Season 2-3 Eren:</strong> Learns shocking truths about Titans and the world beyond the walls.</li>
-      <li><strong>Final Season Eren:</strong> A completely different man, who believes he must destroy the world to save his people.</li>
-    </ul>
+    <h2>The World of Titans</h2>
+    <p>Humanity lives within massive walls, hiding from man-eating giants known as Titans. At first, the story feels like a survival tale — but soon it reveals deeper mysteries about the world and the true nature of the Titans.</p>
 
-    <h2>3. Supporting Cast – Not Just Side Characters</h2>
-    <p>Unlike many shōnen anime, <em>Attack on Titan</em> gives real depth to its supporting cast.</p>
-    <ul>
-      <li><strong>Mikasa Ackerman</strong> – Fierce, loyal, and one of the strongest fighters in anime. Her bond with Eren is both beautiful and heartbreaking.</li>
-      <li><strong>Armin Arlert</strong> – The strategist whose mind often saves humanity more than swords ever could.</li>
-      <li><strong>Levi Ackerman</strong> – Humanity’s strongest soldier, known for his calm demeanor and deadly combat skills. Levi is a fan favorite and a symbol of resilience.</li>
-      <li><strong>Historia, Erwin, Sasha, Jean</strong> – Each character feels alive, with motivations and struggles that make the story richer.</li>
-    </ul>
+    <h2>Eren Yeager’s Transformation</h2>
+    <p>Eren begins as a boy burning with revenge, but his journey takes him from hopeful hero to morally grey anti-hero. His transformation forces viewers to question what freedom really means — and what sacrifices it demands.</p>
 
-    <h2>4. Themes – More Than Just Action</h2>
-    <p>What separates <em>Attack on Titan</em> from other anime is its deep themes:</p>
-    <ul>
-      <li><strong>Freedom vs. Oppression</strong> – Humanity inside the walls is “safe” but not truly free.</li>
-      <li><strong>The Cycle of Hatred</strong> – The war between Eldians and Marleyans mirrors real-world conflicts.</li>
-      <li><strong>Morality in War</strong> – Who is right? Who is wrong? The anime forces you to question every side.</li>
-    </ul>
+    <h2>The Cast That Brings It Alive</h2>
+    <p>Mikasa’s strength, Armin’s intelligence, and Levi’s unmatched combat skills all add layers to the story. Even secondary characters like Historia, Erwin, and Sasha have arcs that stay with you long after the credits roll.</p>
 
-    <h2>5. The Animation 🎬</h2>
-    <p>When Wit Studio first animated <em>Attack on Titan</em>, the action scenes blew everyone’s minds. The way characters fly through cities using ODM (Omni-Directional Mobility) gear is both thrilling and cinematic. In later seasons, MAPPA Studio took over and pushed the anime to an even darker, grittier style that matches the story’s tone.</p>
+    <h2>Animation and Music</h2>
+    <p>The fluid ODM gear battles are some of the most stunning in anime history. Combined with Hiroyuki Sawano’s legendary soundtrack, every scene feels intense and cinematic.</p>
 
-    <h2>6. The Music 🎵</h2>
-    <p>Hiroyuki Sawano’s soundtrack is legendary. Songs like <em>“Guren no Yumiya”</em> and <em>“YouSeeBIGGIRL”</em> have become iconic in anime culture. The music adds tension, emotion, and power to every scene.</p>
+    <h2>Themes That Resonate</h2>
+    <p>Freedom, oppression, and the cycle of hatred — these themes mirror real-world struggles. <em>Attack on Titan</em> doesn’t shy away from showing the harsh truths of war and morality.</p>
 
-    <h2>7. Legacy of Attack on Titan 🌍</h2>
-    <p><em>Attack on Titan</em> isn’t just popular in Japan — it’s a global phenomenon. It has inspired discussions on politics, morality, and human nature. Its ending sparked debates across the anime community, proving how impactful and thought-provoking the series truly is.</p>
-
-    <h2>8. Why You Should Watch It</h2>
-    <p>If you haven’t experienced <em>Attack on Titan</em> yet, here’s why you should:</p>
-    <ul>
-      <li>A gripping story that constantly surprises you.</li>
-      <li>Complex characters with real struggles.</li>
-      <li>Themes that reflect real-world issues.</li>
-      <li>Action scenes that will leave you speechless.</li>
-    </ul>
-
-    <p><strong>Final Thoughts:</strong> <em>Attack on Titan</em> is more than anime — it’s a cultural masterpiece. It redefines storytelling in animation and leaves viewers with questions about humanity, freedom, and morality. Whether you love it or criticize it, you can’t ignore its impact on the anime world.</p>
+    <h2>Final Thoughts</h2>
+    <p><em>Attack on Titan</em> is more than just an anime. It’s a masterpiece that redefined storytelling, leaving viewers around the world questioning humanity, freedom, and the price of survival. If you haven’t watched it yet — you’re missing out.</p>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 7AnimeVerse</p>
   </footer>
