--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="google-adsense-account" content="ca-pub-3834320165700139">
+ <meta name="google-site-verification" content="aborBQudF2h7RoTFtQgezOtSj_1FOG2lY5hkicfcsv8" />
   <title>7AnimeVerse - Your Anime Hub</title>
   <style>
     body {
